Add a few questions and fix the ellipsis usage

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -18,7 +18,7 @@
 {to satisfy people's curiosity about life after death}{0}
 \qstop
 
-\qstart{The Fifth Epochal Revelation (Urantia Papers) was revealed in ...}
+\qstart{The Fifth Epochal Revelation (Urantia Papers) was revealed in \ldots}
 {Armenian}{0}
 {Russian}{0}
 {English}{1}
@@ -73,21 +73,21 @@
 {Urantia}{0}
 \qstop
 
-\qstart{The seven superuniverses in association with the central universe are known as ...}
+\qstart{The seven superuniverses in association with the central universe are known as \ldots}
 {grand universe}{1}
 {master universe}{0}
 {total universe}{0}
 {Paradise}{0}
 \qstop
 
-\qstart{Uninhabited universes of outer space are part of ...}
+\qstart{Uninhabited universes of outer space are part of \ldots}
 {grand universe}{0}
 {master universe}{1}
 {total universe}{0}
 {Paradise}{0}
 \qstop
 
-\qstart{The unifying characterizing quality of Deity is best comprehended by creatures as ...}
+\qstart{The unifying characterizing quality of Deity is best comprehended by creatures as \ldots}
 {perfection}{0}
 {intelligence}{0}
 {wisdom}{0}
@@ -97,7 +97,7 @@
 {power}{0}
 \qstop
 
-\qstart{Divinity is creature comprehensible as ...}
+\qstart{Divinity is creature comprehensible as \ldots}
 {mind, spirit, and matter}{0}
 {love, mercy, and ministry}{0}
 {time, space, and energy}{0}
@@ -105,7 +105,7 @@
 {justice, power, and sovereignty}{0}
 \qstop
 
-\qstart{Divinity is correlated in personality as ...}
+\qstart{Divinity is correlated in personality as \ldots}
 {love, mercy, and ministry}{1}
 {mind, spirit, and matter}{0}
 {truth, beauty, and goodness}{0}
@@ -113,7 +113,7 @@
 {justice, power, and sovereignty}{0}
 \qstop
 
-\qstart{Divinity is disclosed on impersonal levels as ...}
+\qstart{Divinity is disclosed on impersonal levels as \ldots}
 {mind, spirit, and matter}{0}
 {love, mercy, and ministry}{0}
 {truth, beauty, and goodness}{0}
@@ -191,12 +191,12 @@
 {Ultimate}{0}
 \qstop
 
-\qstart{Deity functioning on the first creature\hyp{}identificational level as time\hyp{}space overcontrollers of the grand universe is called ...}
+\qstart{Deity functioning on the first creature\hyp{}identificational level as time\hyp{}space overcontrollers of the grand universe is called \ldots}
 {the Ultimacy of Deity}{0}
 {the Supremacy of Deity}{1}
 \qstop
 
-\qstart{Deity functioning on the second level of unifying divinity expression as effective overcontrollers and absonite upholders of the master universe is called ...}
+\qstart{Deity functioning on the second level of unifying divinity expression as effective overcontrollers and absonite upholders of the master universe is called \ldots}
 {the Ultimacy of Deity}{1}
 {the Supremacy of Deity}{0}
 \qstop
@@ -234,12 +234,12 @@
 {False}{0}
 \qstop
 
-\qstart{Deities of eternal existence, past, present, and future are known as ...}
+\qstart{Deities of eternal existence, past, present, and future are known as \ldots}
 {experiential}{0}
 {existential}{1}
 \qstop
 
-\qstart{Deities actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity are known as ...}
+\qstart{Deities actualizing in the post\hyp{}Havona present but of unending existence throughout all future eternity are known as \ldots}
 {experiential}{1}
 {existential}{0}
 \qstop
@@ -378,13 +378,13 @@
 {Unqualified Absolute}{0}
 \qstop
 
-\qstart{When in doubt it is best to refer the word God to the person of ...}
+\qstart{When in doubt it is best to refer the word God to the person of \ldots}
 {the Universal Father}{1}
 {the Eternal Son}{0}
 {the Infinite Spirit}{0}
 \qstop
 
-\qstart{Thought Adjusters are ...}
+\qstart{Thought Adjusters are \ldots}
 {personal}{0}
 {prepersonal}{1}
 {superpersonal}{0}
@@ -461,7 +461,7 @@
 
 \qpaper{2}{The Nature of God}
 
-\qstart{Truth is...}
+\qstart{Truth is \ldots}
 {living and flexible}{1}
 {best known by its spiritual flavour}{1}
 {coherent, beauty attractive, goodness stabilizing}{1}
@@ -472,7 +472,7 @@
 
 \qpaper{4}{God’s Relation to the Universe}
 
-\qstart{The atonement doctrine is a...}
+\qstart{The atonement doctrine is a \ldots}
 {divinely inspired and true doctrine}{0}
 {affront and insult to God}{1}
 \qstop
@@ -551,7 +551,7 @@
 {no}{1}
 \qstop
 
-\qstart{The transcendence of time and space by pure spirit energies is...}
+\qstart{The transcendence of time and space by pure spirit energies is \ldots}
 {due to the interposition of the antigravity forces of the Third Source and Centre}{0}
 {inherent in the absoluteness of the Eternal Son}{1}
 \qstop
@@ -564,7 +564,7 @@
 {Infinite Spirit}{1}
 \qstop
 
-\qstart{God is love, the Son is mercy, the Spirit is...}
+\qstart{God is love, the Son is mercy, the Spirit is \ldots}
 {law}{0}
 {obedience}{0}
 {peace}{0}
@@ -632,7 +632,7 @@
 {The Infinite Spirit}{0}
 \qstop
 
-\qstart{Energy is thing, mind is meaning, spirit is...}
+\qstart{Energy is thing, mind is meaning, spirit is \ldots}
 {value}{1}
 {substance}{0}
 {destiny}{0}
@@ -730,7 +730,7 @@
 {Trinity Centre}{0}
 \qstop
 
-\qstart{Is the Most Holy Sphere of Paradise...}
+\qstart{Is the Most Holy Sphere of Paradise \ldots}
 {wholly spiritual}{1}
 {wholly material}{0}
 {partly spiritual and partly material}{0}
@@ -878,7 +878,7 @@
 {exactly on the border}{0}
 \qstop
 
-\qstart{The absolute of time is eternity and the absolute of space is...}
+\qstart{The absolute of time is eternity and the absolute of space is \ldots}
 {unknown}{1}
 {infinite and unlimited space}{0}
 \qstop
@@ -1676,7 +1676,7 @@
 {Universal Censors}{0}
 \qstop
 
-\qstart{Each inhabited planet is presided over by ...}
+\qstart{Each inhabited planet is presided over by \ldots}
 {Governor General}{0}
 {Planetary Prince}{1}
 {Chief Archangel}{0}
@@ -1685,7 +1685,7 @@
 {System Sovereign}{0}
 \qstop
 
-\qstart{Each local system has an architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each local system has an architectural sphere as its headquarters and is ruled by \ldots}
 {an Ancient of Days}{0}
 {three Recents of Days}{0}
 {one of the Seven Master Spirits}{0}
@@ -1694,7 +1694,7 @@
 {three Vorondadek Sons, the Most Highs}{0}
 \qstop
 
-\qstart{Each constellation has an architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each constellation has an architectural sphere as its headquarters and is ruled by \ldots}
 {Constellation Sovereign}{0}
 {Ancients of Days}{0}
 {Recents of Days}{0}
@@ -1710,7 +1710,7 @@
 {seven Recents of Days}{0}
 \qstop
 
-\qstart{Each local universe has a magnificent architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each local universe has a magnificent architectural sphere as its headquarters and is ruled by \ldots}
 {a Union of Days}{0}
 {a Recent of Days}{0}
 {one of the Seven Master Spirits}{0}
@@ -1742,7 +1742,7 @@
 {700 million}{0}
 \qstop
 
-\qstart{Each minor sector has a wonderful architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each minor sector has a wonderful architectural sphere as its headquarters and is ruled by \ldots}
 {Paradise Creator Son}{0}
 {three Unions of Days}{0}
 {three Recents of Days}{1}
@@ -1766,7 +1766,7 @@
 {100 million}{0}
 \qstop
 
-\qstart{Each major sector has a superb architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each major sector has a superb architectural sphere as its headquarters and is ruled by \ldots}
 {Paradise Creator Son}{0}
 {three Unions of Days}{0}
 {three Recents of Days}{0}
@@ -1798,7 +1798,7 @@
 {10}{1}
 \qstop
 
-\qstart{Each superuniverse has an enormous and glorious architectural sphere as its headquarters and is ruled by ...}
+\qstart{Each superuniverse has an enormous and glorious architectural sphere as its headquarters and is ruled by \ldots}
 {Paradise Creator Son}{0}
 {three Unions of Days}{0}
 {three Recents of Days}{0}
@@ -2147,7 +2147,7 @@
 {Mighty of Days}{0}
 \qstop
 
-\qstart{The number of Supreme Trinity Personalities is ...}
+\qstart{The number of Supreme Trinity Personalities is \ldots}
 {increasing}{0}
 {fixed}{1}
 {decreasing}{0}
@@ -2296,13 +2296,13 @@
 
 \qpaper{19}{The Co\hyp{}ordinate Trinity\hyp{}Origin Beings}
 
-\qstart{Trinity Teacher Sons are devoted to...}
+\qstart{Trinity Teacher Sons are devoted to \ldots}
 {conscious enlightenment of universe creatures}{1}
 {subconscious enlightenment of universe creatures}{0}
 {superconscious enlightenment of universe creatures}{0}
 \qstop
 
-\qstart{Inspired Trinity Spirits are devoted to...}
+\qstart{Inspired Trinity Spirits are devoted to \ldots}
 {conscious enlightenment of universe creatures}{0}
 {subconscious enlightenment of universe creatures}{0}
 {superconscious enlightenment of universe creatures}{1}
@@ -3319,7 +3319,7 @@
 
 \qpaper{46}{The Local System Headquarters}
 
-\qstart{Chronoldek is...}
+\qstart{Chronoldek is \ldots}
 {the name for the upper deck on the ship that can travel through time}{0}
 {a frandalank that registers time}{1}
 {the name of a realm where time and space are inverted}{0}
@@ -3440,7 +3440,7 @@
 {6,000 years ago}{0}
 \qstop
 
-\qstart{Lucifer was a ...}
+\qstart{Lucifer was a \ldots}
 {Primary Lanonandek Son}{1}
 {Secondary Lanonandek Son}{0}
 {Melchizedek}{0}
@@ -3448,7 +3448,7 @@
 {Archangel}{0}
 \qstop
 
-\qstart{Satan was a...}
+\qstart{Satan was a \ldots}
 {Primary Lanonandek Son}{1}
 {Secondary Lanonandek Son}{0}
 {Melchizedek}{0}
@@ -3478,7 +3478,7 @@
 {Archangel}{0}
 \qstop
 
-\qstart{The dragon of the Revelation of John is symbolic of...}
+\qstart{The dragon of the Revelation of John is symbolic of \ldots}
 {Abaddon}{1}
 {Judas Iscariot}{0}
 {Beelzebub}{1}
@@ -3487,19 +3487,19 @@
 {Stalin}{0}
 \qstop
 
-\qstart{The fallen prince Caligastia is now...}
+\qstart{The fallen prince Caligastia is now \ldots}
 {freely roaming this planet}{1}
 {in custody}{0}
 {executed}{0}
 \qstop
 
-\qstart{Lucifer is now...}
+\qstart{Lucifer is now \ldots}
 {freely roaming the local system of Satania}{0}
 {in custody}{1}
 {executed}{0}
 \qstop
 
-\qstart{Satan is now...}
+\qstart{Satan is now \ldots}
 {freely roaming the local system of Satania}{0}
 {in custody}{1}
 {executed}{0}
@@ -3518,7 +3518,7 @@
 
 \qpaper{57}{The Origin of Urantia}
 
-\qstart{Our planet is known locally as...}
+\qstart{Our planet is known locally as \ldots}
 {the world of the cross}{1}
 {the kingdom of the stupid}{0}
 {the blue marble}{0}
@@ -4375,7 +4375,7 @@
 {by cooked porridge}{0}
 \qstop
 
-\qstart{Adamic children attended school until they were ...}
+\qstart{Adamic children attended school until they were \ldots}
 {10}{0}
 {12}{0}
 {14}{0}
@@ -4404,7 +4404,7 @@
 {Primary Midwayers}{0}
 \qstop
 
-\qstart{When Adam and Eve left the Garden, their family consisted of ...}
+\qstart{When Adam and Eve left the Garden, their family consisted of \ldots}
 {1 generation}{0}
 {2 generations}{0}
 {3 generations}{0}
@@ -4413,7 +4413,7 @@
 {6 generations}{0}
 \qstop
 
-\qstart{When Adam and Eve left the Garden, their family consisted of ...}
+\qstart{When Adam and Eve left the Garden, their family consisted of \ldots}
 {989 pure\hyp{}line descendants}{0}
 {689 pure\hyp{}line descendants}{0}
 {2,011 pure\hyp{}line descendants}{0}
@@ -4521,7 +4521,7 @@
 
 \qpaper{76}{The Second Garden}
 
-\qstart{The transgression of Adam and Eve was ...}
+\qstart{The transgression of Adam and Eve was \ldots}
 {an error of judgment}{1}
 {the sin of conscious and deliberate rebellion}{0}
 \qstop
@@ -4532,13 +4532,13 @@
 {no}{0}
 \qstop
 
-\qstart{Adam and Eve were indwelt by Thought Adjusters...}
+\qstart{Adam and Eve were indwelt by Thought Adjusters \ldots}
 {when they were citizens of Jerusem}{0}
 {during their life in the first garden prior to the default}{0}
 {after they were reduced to mortal status subsequent to the default}{1}
 \qstop
 
-\qstart{The name of the first child of Adam and Eve to be born in the second garden was ...}
+\qstart{The name of the first child of Adam and Eve to be born in the second garden was \ldots}
 {Cain}{0}
 {Abel}{1}
 {Seth}{0}
@@ -4786,7 +4786,7 @@
 
 \qpaper{78}{The Violet Race after the Days of Adam}
 
-\qstart{The violet race consisted of...}
+\qstart{The violet race consisted of \ldots}
 {pure Adamites only}{0}
 {Adamites and Adamsonites}{1}
 {Andites and Andonites}{0}
@@ -4908,7 +4908,7 @@
 {umbilical cord set with pearls}{1}
 \qstop
 
-\qstart{Moses' injunction against fetishes became ...}
+\qstart{Moses' injunction against fetishes became \ldots}
 {the Law of God}{0}
 {the Word of God}{0}
 {the supreme fetish}{1}
@@ -5015,7 +5015,7 @@
 {Indra}{1}
 \qstop
 
-\qstart{The religion of Buddhism is based on the teachings of ...}
+\qstart{The religion of Buddhism is based on the teachings of \ldots}
 {Lao-tse}{0}
 {Gautama Siddhartha}{1}
 {Confucius (Kung Fu-tze)}{0}
@@ -5033,7 +5033,7 @@
 
 \qpaper{95}{The Melchizedek Teachings in the Levant}
 
-\qstart{In 6,000 years only ... great prophets arose among the Egyptians.}
+\qstart{In 6,000 years only \ldots\ great prophets arose among the Egyptians.}
 {2}{0}
 {3}{0}
 {4}{1}
@@ -5043,7 +5043,7 @@
 {28}{0}
 \qstop
 
-\qstart{The four great prophets that appeared in Egypt are...}
+\qstart{The four great prophets that appeared in Egypt are \ldots}
 {Moses}{1}
 {Amenemope}{1}
 {Ikhnaton}{1}
@@ -5305,7 +5305,7 @@
 
 \qpaper{117}{God the Supreme}
 
-\qstart{Love is...}
+\qstart{Love is \ldots}
 {living and flexible}{0}
 {best known by its spiritual flavour}{0}
 {coherent, beauty attractive, goodness stabilizing}{0}
@@ -5433,7 +5433,7 @@
 
 \qpaper{121}{The Times of Michael’s Bestowal}
 
-\qstart{The notion that Israel is still ``God's chosen people'' is...}
+\qstart{The notion that Israel is still ``God's chosen people'' is \ldots}
 {divinely inspired and revealed truth}{0}
 {delusion}{1}
 \qstop
@@ -5699,7 +5699,7 @@
 {Jerusalem}{0}
 \qstop
 
-\qstart{Who said that ``the spiritually blind individual who logically follows scientific dictation, social usage, and religious dogma... is destined to become an intellectual parrot, a social automaton, and a slave to religious authority''?}
+\qstart{Who said that ``the spiritually blind individual who logically follows scientific dictation, social usage, and religious dogma \ldots\ is destined to become an intellectual parrot, a social automaton, and a slave to religious authority''?}
 {Confucius}{0}
 {Jesus of Nazareth}{1}
 {Simon Peter}{0}
@@ -5708,7 +5708,7 @@
 {John Zebedee}{0}
 \qstop
 
-\qstart{To whom did Jesus say ``...the revelations of God flash upon earth in the lives of the men who reveal God to their fellows''}
+\qstart{To whom did Jesus say ``\ldots\ the revelations of God flash upon earth in the lives of the men who reveal God to their fellows''}
 {Ganid}{1}
 {Gonod}{0}
 {Simon Peter}{0}
@@ -5890,7 +5890,64 @@
 {Judas Iscariot}{0}
 \qstop
 
+\qstart{Thought Adjusters are nontime beings \ldots}
+{once they enter the domains of space and time}{0}
+{once they are personalized}{1}
+{once they fuse with their mortal hosts}{0}
+{always}{0}
+{never}{0}
+\qstop
+
 \qpaper{137}{Tarrying Time in Galilee}
+
+\qstart{What was the name of the bride of the wedding in Cana?}
+{Miriam}{0}
+{Delilah}{0}
+{Naomi}{1}
+{Anahit}{0}
+{Elisabeth}{0}
+{Rebecca}{0}
+\qstop
+
+\qstart{How many guests were bidden to the wedding in Cana?}
+{12}{0}
+{48}{0}
+{72}{0}
+{100}{0}
+{250}{1}
+{500}{0}
+{1000}{0}
+\qstop
+
+\qstart{How many guests turned up at to the wedding in Cana?}
+{12}{0}
+{48}{0}
+{72}{0}
+{100}{0}
+{250}{0}
+{500}{0}
+{1000}{1}
+\qstop
+
+\qstart{On what day of the week did the wedding in Cana occur?}
+{Monday}{0}
+{Tuesday}{0}
+{Wednesday}{1}
+{Thursday}{0}
+{Friday}{0}
+{Saturday}{0}
+{Sunday}{0}
+\qstop
+
+\qstart{On what day of the week did the wedding in Cana occur?}
+{Monday}{0}
+{Tuesday}{0}
+{Wednesday}{1}
+{Thursday}{0}
+{Friday}{0}
+{Saturday}{0}
+{Sunday}{0}
+\qstop
 
 \qpaper{138}{Training the Kingdom’s Messengers}
 
@@ -6150,7 +6207,7 @@
 
 \qpaper{182}{In Gethsemane}
 
-\qstart{Prior to Jesus' arrest and in response to Jesus' prayers in the garden of Gethsemane a ... came down by his side and, speaking to him, touched him and strengthened him.}
+\qstart{Prior to Jesus' arrest and in response to Jesus' prayers in the garden of Gethsemane a \ldots\ came down by his side and, speaking to him, touched him and strengthened him.}
 {secondary midwayer}{0}
 {primary midwayer}{0}
 {mighty angel}{1}
