Added two index entries

--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -20,7 +20,7 @@
 \vs p000 0:6 The seven evolving superuniverses in association with the central and divine universe, we commonly refer to as the \bibemph{grand universe;} these are the now organized and inhabited creations. They are all a part of the \bibemph{master universe,} which also embraces the uninhabited but mobilizing universes of outer space.
 \usection{Deity and Divinity}
 \vs p000 1:1 The universe of universes presents phenomena of deity\fnst{In the lower case to reflect a certain degree of \bibemph{ambiguity} in associating observed universe phenomena with the activity of Deity. This sentence prepares the \bibemph{empirical soil} for the definition of Deity, which commences in the next paragraph.} activities on diverse levels of cosmic realities, mind meanings, and spirit values, but all of these ministrations --- personal or otherwise --- are divinely co\hyp{}ordinated.
-\vs p000 1:2 \pc DEITY\fnst{In all capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
+\vs p000 1:2 \pc DEITY\index{Deity, as a word symbol!Terminology}\fnst{In all capitals to reflect the \bibemph{over-exactness} of this description which compensates for the ambiguity in the previous paragraph. Without resorting to such a combination of ambiguity and over-exactness it would probably be well\hyp{}nigh impossible to formulate a definition of Deity, which is both comprehensible by a mortal mind and free of the circular reasoning involved in the conceptual pair (Deity, divinity).} is personalizable as God, is prepersonal and superpersonal in ways not altogether comprehensible by man. Deity is characterized by the quality of unity --- actual or potential --- on all supermaterial levels of reality; and this unifying quality is best comprehended by creatures as divinity.
 \vs p000 1:3 \pc Deity functions on personal, prepersonal, and superpersonal levels. Total Deity is functional on the following seven levels:
 \vs p000 1:4 \ublistelem{1.}\bibnobreakspace \bibemph{Static ---} self\hyp{}contained and self\hyp{}existent Deity.
 \vs p000 1:5 \ublistelem{2.}\bibnobreakspace \bibemph{Potential ---} self\hyp{}willed and self\hyp{}purposive Deity.
@@ -51,12 +51,12 @@
 \vs p000 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{Prepersonal ---} as in the ministry of the Father fragments, such as the Thought Adjusters.
 \vs p000 2:4 \ublistelem{2.}\bibnobreakspace \bibemph{Personal ---} as in the evolutionary experience of created and procreated beings.
 \vs p000 2:5 \ublistelem{3.}\bibnobreakspace \bibemph{Superpersonal ---} as in the eventuated existences of certain absonite and associated beings.
-\vs p000 2:6 GOD is a word symbol designating all personalizations of Deity. The term requires a different definition on each personal level of Deity function and must be still further redefined within each of these levels, as this term may be used to designate the diverse co\hyp{}ordinate and subordinate personalizations of Deity; for example: the Paradise Creator Sons --- the local universe fathers.
+\vs p000 2:6 GOD\index{God, as a word symbol!Terminology} is a word symbol designating all personalizations of Deity. The term requires a different definition on each personal level of Deity function and must be still further redefined within each of these levels, as this term may be used to designate the diverse co\hyp{}ordinate and subordinate personalizations of Deity; for example: the Paradise Creator Sons --- the local universe fathers.
 \vs p000 2:7 \pc The term God, as we make use of it, may be understood:
 \vs p000 2:8 \bibemph{By designation ---} as God the Father.
 \vs p000 2:9 \bibemph{By context ---} as when used in the discussion of some one deity level or association. When in doubt as to the exact interpretation of the word God, it would be advisable to refer it to the person of the Universal Father.
 \vs p000 2:10 \pc The term God always denotes \bibemph{personality.} Deity may, or may not, refer to divinity personalities.
-\vs p000 2:11 \pc The word GOD is used, in these papers, with the following meanings:
+\vs p000 2:11 \pc The word GOD\index{God, as a word symbol!Terminology} is used, in these papers, with the following meanings:
 \vs p000 2:12 \ublistelem{1.}\bibnobreakspace \bibemph{God the Father ---} Creator, Controller, and Upholder. The Universal Father, the First Person of Deity.
 \vs p000 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{God the Son ---} Co\hyp{}ordinate Creator, Spirit Controller, and Spiritual Administrator. The Eternal Son, the Second Person of Deity.
 \vs p000 2:14 \ublistelem{3.}\bibnobreakspace \bibemph{God the Spirit ---} Conjoint Actor, Universal Integrator, and Mind Bestower. The Infinite Spirit, the Third Person of Deity.
